--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://andriimedintsev:andriidev@cluster0.t914xdx.mongodb.net/blog?retryWrites=true&w=majority"
-SECRET="andriidev"
+MONGO_URL=""
+SECRET=""
